RESOLVED FIXED294842
Slack is not recreating its web socket in case of network process crash
https://bugs.webkit.org/show_bug.cgi?id=294842
Summary Slack is not recreating its web socket in case of network process crash
youenn fablet
Reported 2025-06-23 08:06:45 PDT
Slack is not recreating its web socket in case of network process crash
Attachments
youenn fablet
Comment 1 2025-06-23 08:07:01 PDT
youenn fablet
Comment 2 2025-06-23 08:13:03 PDT
EWS
Comment 3 2025-06-25 00:32:20 PDT
Committed 296607@main (58242111e774): <https://commits.webkit.org/296607@main> Reviewed commits have been landed. Closing PR #47063 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.